***************************************************************
** MovieJukebox Release Notes
***************************************************************

MovieJukebox 2.5 SNAPSHOT
-------------------------
 - Enhancement   #314 Sort title option in NFO
 - Enhancement   #954 Better handling of regional releases
 - Enhancement  #1723 Option to remove TV Shows from Sets in category listings
 - Enhancement  #1853 Multiple index pages
 - Enhancement  #1856 originalTitle functionality
 - Enhancement  #1882 Separate index files for each category
 - Fixed defect #1886 HTML indexes recreated every time fixed
 - Enhancement  #1895 AniDbPlugin caches Anime information
 - Fixed defect #1896 AniDbPlugin falls back to Romaji title if no English title exists
 - Enhancement  #1897 Cast enhancement
 - Enhancement  #1900 Functionality of the KinopoiskPlugin
 - Enhancement  #1901 Support for Awards
 - Enhancement  #1903 Support for 3D movie file naming
 - Fixed defect #1907 Awards will not be downloaded if imdb.site is set other than default
 - Fixed defect #1912 Issue with curly brackets and parenthesis' in filename in ImdbPlugin
 - Fixed defect #1913 Issue with sorttitle when using title
 - Fixed defect #1918 Watched category not updated
 - Fixed defect #1922 Categories files deleted from jukebox after cleanup

MovieJukebox 2.4
----------------
 - Fixed defect  #793 Problems with more than 9 parts
 - Enhancement   #989 Multiple Directors
 - Fixed defect #1036 Removed/renamed trailers stays in XML
 - Fixed defect #1141 Allow fanart to be saved in png format
 - Fixed defect #1484 Problem with series spanning more than 8 season on set page
 - Enhancement  #1594 Setting for thumbnails per page/line for sets
 - Enhancement  #1817 The outline should have the option to limit the length
 - Fixed defect #1819 WebBrowser error halts processing
 - Enhancement  #1822 Overlay for fanart
 - Enhancement  #1823 Ability to skip genres